--- a/index.html
+++ b/index.html
@@ -368,14 +368,9 @@ Reveal.addEventListener( 'customevent', function() {
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				// Parallax background image
-    parallaxBackgroundImage: "assests/image.jpg",
-
-
-    // Parallax background size
-    parallaxBackgroundSize: '1920px 1080px', // CSS syntax, e.g. "2100px 900px" - currently only pixels are supported (don't use % or auto)
 
     // This slide transition gives best results:
-    transition: 'slide',
+    transition: 'cube',
 				controls: true,
 				progress: true,
 				history: true,
