--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
 				// Parallax background image
 
     // This slide transition gives best results:
-    transition: 'cube',
+    transition: 'slide',
 				controls: true,
-				progress: true,
+				progress: false,
 				history: true,
 				center: true,
 				audioPrefix: 'audio/',    // audio files are stored in the "audio" folder
 	audioSuffix: '.mp3',	  // audio files have the ".ogg" ending
 	audioTextToSpeechURL: "http://tts-api.com/tts.mp3?q=",  // text is added to this URL 
 	audioDefaultDuration: 0,  // default duration if no audio is available
-	audioPlayerOpacity: 0.05, // opacity value of audio player if unfocused
+	audioPlayerOpacity: 0.00, // opacity value of audio player if unfocused
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
