--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 
 		<title>James Madison</title>
-
+        <link href='http://fonts.googleapis.com/css?family=Rouge+Script' rel='stylesheet' type='text/css'>
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="author" content="Andrew Wiik">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section >
-					<h1>James Madison</h1>
+					<h1 srtyle="font-family: 'Rouge Script', cursive;">James Madison</h1>
 					<h3>4th President of the United States</h3>
 					<p>
 						<small>Created by Robert Nelson, Paul Wenzel, and Andrew Wiik</small>
