--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section >
-					<h1 srtyle="font-family: 'Rouge Script', cursive;">James Madison</h1>
+					<h1 style="font-family: 'Rouge Script', cursive;">James Madison</h1>
 					<h3>4th President of the United States</h3>
 					<p>
 						<small>Created by Robert Nelson, Paul Wenzel, and Andrew Wiik</small>
@@ -87,7 +87,7 @@
 	audioSuffix: '.mp3',	  // audio files have the ".ogg" ending
 	audioTextToSpeechURL: "http://tts-api.com/tts.mp3?q=",  // text is added to this URL 
 	audioDefaultDuration: 0,  // default duration if no audio is available
-	audioPlayerOpacity: 0.00, // opacity value of audio player if unfocused
+	audioPlayerOpacity: 0.01, // opacity value of audio player if unfocused
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
