--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
+		<style>
+		.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {text-transform: none;}
+		</style>
 	</head>
 
 	<body>
