--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<small>Created by Robert Nelson, Paul Wenzel, and Andrew Wiik</small>
 					</p>
 				</section>
-				<section data-color="white" data-background="#ff6721" data-background-transition="concave">
+				<section data-color="white" data-background-transition="concave">
 				<section>
 					<h2>Quotes by James Madison</h2>
 				</section>
