--- a/test/index.html
+++ b/test/index.html
@@ -4,14 +4,14 @@
 	<title> James Madison Test</title>
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-</head>
+</he
 <body>
  <div class="row">
     <form class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-          <label for="first_name">First Name</label>
+          <input  id="entry_989581125" type="text" class="validate">
+          <label for="entry_989581125">First Name</label>
         </div>
         <div class="input-field col s6">
           <input id="last_name" type="text" class="validate">
