--- a/test/index.html
+++ b/test/index.html
@@ -4,8 +4,9 @@
 	<title> James Madison Test</title>
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-</he
-<body>
+</head>
+<body class="blue">
+<h3>Take the test below</h3>
  <div class="row">
     <form class="col s12">
       <div class="row">
