--- a/test/index.html
+++ b/test/index.html
@@ -34,11 +34,14 @@
    .input-field .prefix.active {
      color: #000;
    }
-        
+   input[type="text"], input[type="password"], input[type="email"], input[type="url"], input[type="time"], input[type="date"], input[type="datetime-local"], input[type="tel"], input[type="number"], input[type="search"], textarea.materialize-textarea {
+   	opacity:.5;
+   	border-color: white;
+   }
    </style>
 </head>
 <body class="blue">
-<h3>Take the test below</h3>
+<h3 class="white-text">Take the test below</h3>
  <div class="row">
     <form class="col s12">
       <div class="row">
