--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
    .input-field input[type=text]:focus {
      border-bottom: 1px solid white;
      box-shadow: 0 1px 0 0 white;
+     opacity:1;
    }
    /* valid color */
    .input-field input[type=text].valid {
