--- a/test/index.html
+++ b/test/index.html
@@ -42,6 +42,7 @@
    </style>
 </head>
 <body class="blue">
+<div class="container">
 <h3 class="white-text">Take the test below</h3>
  <div class="row">
     <form class="col s12">
@@ -167,7 +168,7 @@
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
 <input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
 <div class="ss-password-warning ss-secondary-text">Never submit passwords through Google Forms.</div></td>
-</tr></tbody></table></div></ol></form>
+</tr></tbody></table></div></ol></form></div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
