--- a/test/index.html
+++ b/test/index.html
@@ -43,19 +43,26 @@
 </head>
 <body class="blue">
 <div class="container">
-<h3 class="white-text">Take the test below</h3>
+<h5 class="white-text">Take the test below</h5>
  <div class="row">
     <form class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input  id="entry_989581125" type="text" class="validate">
+          <input  id="entry_989581125" type="text">
           <label for="entry_989581125">First Name</label>
         </div>
         <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
-          <label for="last_name">Last Name</label>
+          <input id="entry_434726236" type="text">
+          <label for="entry_434726236">Last Name</label>
         </div>
       </div>
+      <div class="row">
+      <div class="col s12">
+      <div class="row">
+      <div class="input-field col s12">
+      <input id="entry_241456183" type="text">
+      <label for="entry_241456183">Your School Email</label>
+
 <form action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
