--- a/test/index.html
+++ b/test/index.html
@@ -43,7 +43,7 @@
 </head>
 <body class="blue">
 <div class="container">
-<h5 class="white-text">Take the test below</h5>
+<h5 class="white-text center-align">Take the test below</h5>
  <div class="row">
     <form class="col s12">
       <div class="row">
@@ -62,6 +62,10 @@
       <div class="input-field col s12">
       <input id="entry_241456183" type="text">
       <label for="entry_241456183">Your School Email</label>
+      </div>
+      </div>
+      </div>
+      </div>
 
 <form action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="ss-form-question errorbox-good" role="listitem">
