--- a/test/index.html
+++ b/test/index.html
@@ -60,7 +60,7 @@
       <div class="col s12">
       <div class="row">
       <div class="input-field col s12">
-      <input id="entry_241456183" type="text">
+      <input id="entry_241456183" type="email" style="color:white;">
       <label for="entry_241456183">Your School Email</label>
       </div>
       </div>
