--- a/test/index.html
+++ b/test/index.html
@@ -39,6 +39,9 @@
    	opacity:.5;
    	border-color: white;
    }
+   html {
+   	color:white;
+   }
    </style>
 </head>
 <body class="blue">
@@ -60,7 +63,7 @@
       <div class="col s12">
       <div class="row">
       <div class="input-field col s12">
-      <input id="entry_241456183" type="email" style="color:white;">
+      <input id="entry_241456183" type="email">
       <label for="entry_241456183">Your School Email</label>
       </div>
       </div>
