--- a/test/index.html
+++ b/test/index.html
@@ -71,41 +71,8 @@
       </div>
 
 <form action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
-<div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_989581125"><div class="ss-q-title">First Name
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-<input type="text" name="entry.989581125" value="" class="ss-q-short" id="entry_989581125" dir="auto" aria-label="First Name  " aria-required="true" required="" title="">
-<div class="error-message" id="1372031377_errorMessage"></div>
-<div class="required-message">This is a required question</div>
-</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_434726236"><div class="ss-q-title">Last Name
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-<input type="text" name="entry.434726236" value="" class="ss-q-short" id="entry_434726236" dir="auto" aria-label="Last Name  " aria-required="true" required="" title="">
-<div class="error-message" id="175733849_errorMessage"></div>
-<div class="required-message">This is a required question</div>
-</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_241456183"><div class="ss-q-title">Email Address
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-<input type="text" name="entry.241456183" value="" class="ss-q-short" id="entry_241456183" dir="auto" aria-label="Email Address  " aria-required="true" required="" title="">
-<div class="error-message" id="2136265193_errorMessage"></div>
-<div class="required-message">This is a required question</div>
-</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_1963512104"><div class="ss-q-title">James Madison was this number president of the United States
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-
-<ul class="ss-choices" role="radiogroup" aria-label="James Madison was this number president of the United States  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="3rd" id="group_157262231_1" role="radio" class="ss-q-radio" aria-label="3rd" required="" aria-required="true"></span>
+<div class="white-text">James Madison was this number president of the United States...</div>
+<ul role="radiogroup"><li><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="3rd" id="group_157262231_1" role="radio" class="with-gap" aria-label="3rd" required="" aria-required="true"></span>
 <span class="ss-choice-label">3rd</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="4th" id="group_157262231_2" role="radio" class="ss-q-radio" aria-label="4th" required="" aria-required="true"></span>
 <span class="ss-choice-label">4th</span>
