--- a/test/index.html
+++ b/test/index.html
@@ -69,12 +69,13 @@
       </div>
       </div>
       </div>
-
 <form action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="white-text">James Madison was this number president of the United States...</div>
-<ul role="radiogroup"><li><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="3rd" id="group_157262231_1" role="radio" class="with-gap" aria-label="3rd" required="" aria-required="true"></span>
-<span class="ss-choice-label">3rd</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="4th" id="group_157262231_2" role="radio" class="ss-q-radio" aria-label="4th" required="" aria-required="true"></span>
+<p>
+<input type="radio" name="entry.157262231" value="3rd" id="group_157262231_1" role="radio" class="with-gap"></input>
+<label>3rd</label>
+</p>
+<li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="4th" id="group_157262231_2" role="radio" class="ss-q-radio" aria-label="4th" required="" aria-required="true"></span>
 <span class="ss-choice-label">4th</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="7th" id="group_157262231_3" role="radio" class="ss-q-radio" aria-label="7th" required="" aria-required="true"></span>
 <span class="ss-choice-label">7th</span>
