--- a/test/index.html
+++ b/test/index.html
@@ -153,5 +153,10 @@
 </tr></tbody></table></div></ol></form></div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
+<script>
+  $(document).ready(function() {
+    $('select').material_select();
+  });
+  </script>
 </body>
 </html>
