--- a/test/index.html
+++ b/test/index.html
@@ -71,9 +71,25 @@
       </div>
 <form action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="white-text">James Madison was this number president of the United States...</div>
+ <p>
+      <input name="entry.157262231" value="3rd" type="radio" id="group_157262231_1" />
+      <label for="group_157262231_1">3rd</label>
+    </p>
+    <p>
+      <input name="entry.157262231" value="4th" type="radio" id="group_157262231_2"/>
+      <label for="group_157262231_2">4th</label>
+    </p>
+    <p>
+      <input class="with-gap" name="entry.157262231" value="7th" type="radio" id="group_157262231_3"  />
+      <label for="group_157262231_3">7th</label>
+    </p>
+      <p>
+        <input name="entry.157262231" type="radio" value="5th" id="group_157262231_4" />
+        <label for="group_157262231_4">5th</label>
+    </p>
 <p>
 <input type="radio" name="entry.157262231" value="3rd" id="group_157262231_1" role="radio" class="with-gap"></input>
-<label>3rd</label>
+<label for="group_157262231_1">3rd</label>
 </p>
 <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="4th" id="group_157262231_2" role="radio" class="ss-q-radio" aria-label="4th" required="" aria-required="true"></span>
 <span class="ss-choice-label">4th</span>
