--- a/test/index.html
+++ b/test/index.html
@@ -87,17 +87,15 @@
         <input name="entry.157262231" type="radio" value="5th" id="group_157262231_4" />
         <label for="group_157262231_4">5th</label>
     </p>
-<p>
-<input type="radio" name="entry.157262231" value="3rd" id="group_157262231_1" role="radio" class="with-gap"></input>
-<label for="group_157262231_1">3rd</label>
-</p>
-<li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="4th" id="group_157262231_2" role="radio" class="ss-q-radio" aria-label="4th" required="" aria-required="true"></span>
-<span class="ss-choice-label">4th</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="7th" id="group_157262231_3" role="radio" class="ss-q-radio" aria-label="7th" required="" aria-required="true"></span>
-<span class="ss-choice-label">7th</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.157262231" value="5th" id="group_157262231_4" role="radio" class="ss-q-radio" aria-label="5th" required="" aria-required="true"></span>
-<span class="ss-choice-label">5th</span>
-</label></li></ul>
+<div class="white-text">James Madison was this number president of the United States...</div>
+<div class="switch">
+    <label>
+      No
+      <input name="entry.1219999632" value="No" id="group_1219999632_1"type="checkbox">
+      <span class="lever"></span>
+      Yes
+    </label>
+  </div>
 <div class="error-message" id="1963512104_errorMessage"></div>
 <div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
