--- a/test/index.html
+++ b/test/index.html
@@ -46,7 +46,8 @@
 </head>
 <body class="blue">
 <div class="container">
-<h5 class="white-text center-align">Take the test below</h5>
+      <h5 class="white-text center-align">Take the test below</h5>
+<form action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
  <div class="row">
     <form class="col s12">
       <div class="row">
@@ -69,7 +70,6 @@
       </div>
       </div>
       </div>
-<form action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="white-text">James Madison was this number president of the United States...</div>
  <p>
       <input name="entry.157262231" value="3rd" type="radio" id="group_157262231_1" />
@@ -88,14 +88,15 @@
         <label for="group_157262231_4">5th</label>
     </p>
 <div class="white-text">James Madison was this number president of the United States...</div>
-<div class="switch">
-    <label>
-      No
-      <input name="entry.1219999632" value="No" id="group_1219999632_1"type="checkbox">
-      <span class="lever"></span>
-      Yes
-    </label>
-  </div>
+<p>
+      <input class="with-gap" name="entry.1219999632" value="Yes" id="group_1219999632_2" type="radio"/>
+      <label for="group_157262231_3">Yes</label>
+    </p>
+    <p>
+      <input class="with-gap" name="entry.1219999632" value="No" id="group_1219999632_1" type="radio"/>
+      <label for="group_157262231_3">No</label>
+    </p>
+
 <div class="error-message" id="1963512104_errorMessage"></div>
 <div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
