--- a/test/index.html
+++ b/test/index.html
@@ -42,6 +42,24 @@
    html {
    	color:white;
    }
+   .with-gap[type="radio"]:checked + label:after {
+    border-radius: 50%;
+    border: 2px solid #FFF;
+    background-color: #FFF;
+    z-index: 0;
+    transform: scale(0.5);
+}
+.with-gap[type="radio"]:checked + label:before {
+    border-radius: 50%;
+    border: 2px solid #FFF;
+}
+.with-gap[type="radio"]:checked + label:after {
+    border-radius: 50%;
+    border: 2px solid #FFF;
+    background-color: #FFF;
+    z-index: 0;
+    transform: scale(0.5);
+}
    </style>
 </head>
 <body class="blue">
