--- a/test/index.html
+++ b/test/index.html
@@ -60,6 +60,17 @@
     z-index: 0;
     transform: scale(0.5);
 }
+
+[type="radio"]:not(:checked) + label:after {
+    border-radius: 50%;
+    border: 2px solid #FFF;
+    z-index: -1;
+    transform: scale(0);
+}
+[type="radio"]:not(:checked) + label:before {
+    border-radius: 50%;
+    border: 2px solid #FFF;
+}
    </style>
 </head>
 <body class="blue">
