--- a/test/index.html
+++ b/test/index.html
@@ -101,19 +101,19 @@
       </div>
 <div class="white-text">James Madison was this number president of the United States...</div>
  <p>
-      <input name="entry.157262231" value="3rd" type="radio" id="group_157262231_1" />
+      <input name="entry.157262231" value="3rd" type="radio" class="with-gap" id="group_157262231_1" />
       <label for="group_157262231_1">3rd</label>
     </p>
     <p>
-      <input name="entry.157262231" value="4th" type="radio" id="group_157262231_2"/>
+      <input name="entry.157262231" value="4th" type="radio" class="with-gap" id="group_157262231_2"/>
       <label for="group_157262231_2">4th</label>
     </p>
     <p>
-      <input class="with-gap" name="entry.157262231" value="7th" type="radio" id="group_157262231_3"  />
+      <input name="entry.157262231" value="7th" type="radio" class="with-gap" id="group_157262231_3"  />
       <label for="group_157262231_3">7th</label>
     </p>
       <p>
-        <input name="entry.157262231" type="radio" value="5th" id="group_157262231_4" />
+        <input name="entry.157262231" type="radio" value="5th" class="with-gap" id="group_157262231_4" />
         <label for="group_157262231_4">5th</label>
     </p>
 <div class="white-text">James Madison was this number president of the United States...</div>
