--- a/test/index.html
+++ b/test/index.html
@@ -71,7 +71,11 @@
     border-radius: 50%;
     border: 2px solid #FFF;
 }
+label {
+	color: #FFF;
+}
    </style>
+}
 </head>
 <body class="blue">
 <div class="container">
