--- a/test/index.html
+++ b/test/index.html
@@ -120,7 +120,7 @@ label {
         <input name="entry.157262231" type="radio" value="5th" class="with-gap" id="group_157262231_4" />
         <label for="group_157262231_4">5th</label>
     </p>
-<div class="white-text">James Madison was this number president of the United States...</div>
+<div class="white-text">Did James Madison propose the Virginia Plan? </div>
 <p>
       <input class="with-gap" name="entry.1219999632" value="Yes" id="group_1219999632_2" type="radio"/>
       <label for="group_1219999632_2">Yes</label>
@@ -128,6 +128,24 @@ label {
     <p>
       <input class="with-gap" name="entry.1219999632" value="No" id="group_1219999632_1" type="radio"/>
       <label for="group_1219999632_1">No</label>
+    </p>
+    <div class="white-text">Did James Madison Introduce the idea of Checks and Balances?</div>
+<p>
+      <input class="with-gap" name="entry.486375789" value="Yes" id="group_486375789_1" type="radio"/>
+      <label for="group_486375789_1">Yes</label>
+    </p>
+    <p>
+      <input class="with-gap" name="entry.486375789" value="No" id="group_1219999632_2" type="radio"/>
+      <label for="group_486375789_2">No</label>
+    </p>
+    <div class="white-text">Did James Madison Introduce the idea of Checks and Balances?</div>
+<p>
+      <input class="with-gap" name="entry.989730994" value="Yes" id="group_989730994_1" type="radio"/>
+      <label for="group_989730994_1">Yes</label>
+    </p>
+    <p>
+      <input class="with-gap" name="entry.989730994" value="No" id="group_989730994_2" type="radio"/>
+      <label for="group_989730994_2">No</label>
     </p>
 
 <div class="error-message" id="1963512104_errorMessage"></div>
