--- a/test/index.html
+++ b/test/index.html
@@ -135,10 +135,10 @@ label {
       <label for="group_486375789_1">Yes</label>
     </p>
     <p>
-      <input class="with-gap" name="entry.486375789" value="No" id="group_1219999632_2" type="radio"/>
+      <input class="with-gap" name="entry.486375789" value="No" id="group_486375789_2" type="radio"/>
       <label for="group_486375789_2">No</label>
     </p>
-    <div class="white-text">Did James Madison Introduce the idea of Checks and Balances?</div>
+    <div class="white-text">Was James Madison one of the authors of the Federalists Papers?</div>
 <p>
       <input class="with-gap" name="entry.989730994" value="Yes" id="group_989730994_1" type="radio"/>
       <label for="group_989730994_1">Yes</label>
@@ -147,65 +147,24 @@ label {
       <input class="with-gap" name="entry.989730994" value="No" id="group_989730994_2" type="radio"/>
       <label for="group_989730994_2">No</label>
     </p>
+    <div class="white-text">What is James Madiso known as being?</div>
+ <p>
+      <input type="radio" class="with-gap" name="entry.399846943" value="The Midnight Rider" id="group_399846943_1"/>
+      <label for="group_399846943_1">The Midnight Rider</label>
+    </p>
+    <p>
+      <input type="radio" class="with-gap" name="entry.399846943" value="The Ghost" id="group_399846943_2"/>
+      <label for="group_399846943_2">The Ghost</label>
+    </p>
+    <p>
+      <input type="radio" class="with-gap" name="entry.399846943" value="The Father of the Constitution" id="group_399846943_3"/>
+      <label for="group_399846943_3">The Father of the Constitution</label>
+    </p>
+      <p>
+        <input type="radio" class="with-gap" name="entry.399846943" value="The Second President of the United States" id="group_399846943_4"/>
+        <label for="group_399846943_4">The Second President of the United States</label>
+    </p>
 
-<div class="error-message" id="1963512104_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_1181223260"><div class="ss-q-title">Did James Madison propose the Virginia Plan?
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-
-<ul class="ss-choices" role="radiogroup" aria-label="Did James Madison propose the Virginia Plan?  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1219999632" value="No" id="group_1219999632_1" role="radio" class="ss-q-radio" aria-label="No" required="" aria-required="true"></span>
-<span class="ss-choice-label">No</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1219999632" value="Yes" id="group_1219999632_2" role="radio" class="ss-q-radio" aria-label="Yes" required="" aria-required="true"></span>
-<span class="ss-choice-label">Yes</span>
-</label></li></ul>
-<div class="error-message" id="1181223260_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_2146039639"><div class="ss-q-title">Did James Madison Introduce the idea of Checks and Balances?
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-
-<ul class="ss-choices" role="radiogroup" aria-label="Did James Madison Introduce the idea of Checks and Balances?  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.486375789" value="Yes" id="group_486375789_1" role="radio" class="ss-q-radio" aria-label="Yes" required="" aria-required="true"></span>
-<span class="ss-choice-label">Yes</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.486375789" value="No" id="group_486375789_2" role="radio" class="ss-q-radio" aria-label="No" required="" aria-required="true"></span>
-<span class="ss-choice-label">No</span>
-</label></li></ul>
-<div class="error-message" id="2146039639_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_1814184025"><div class="ss-q-title">Was James Madison one of the authors of the Federalists Papers?
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-
-<ul class="ss-choices" role="radiogroup" aria-label="Was James Madison one of the authors of the Federalists Papers?  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.989730994" value="Yes" id="group_989730994_1" role="radio" class="ss-q-radio" aria-label="Yes" required="" aria-required="true"></span>
-<span class="ss-choice-label">Yes</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.989730994" value="No" id="group_989730994_2" role="radio" class="ss-q-radio" aria-label="No" required="" aria-required="true"></span>
-<span class="ss-choice-label">No</span>
-</label></li></ul>
-<div class="error-message" id="1814184025_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_939568233"><div class="ss-q-title">What is James Madiso known as being?
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-
-<ul class="ss-choices" role="radiogroup" aria-label="What is James Madiso known as being?  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.399846943" value="The Midnight Rider" id="group_399846943_1" role="radio" class="ss-q-radio" aria-label="The Midnight Rider" required="" aria-required="true"></span>
-<span class="ss-choice-label">The Midnight Rider</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.399846943" value="The Ghost" id="group_399846943_2" role="radio" class="ss-q-radio" aria-label="The Ghost" required="" aria-required="true"></span>
-<span class="ss-choice-label">The Ghost</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.399846943" value="The Father of the Constitution" id="group_399846943_3" role="radio" class="ss-q-radio" aria-label="The Father of the Constitution" required="" aria-required="true"></span>
-<span class="ss-choice-label">The Father of the Constitution</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.399846943" value="The Second President of the United States" id="group_399846943_4" role="radio" class="ss-q-radio" aria-label="The Second President of the United States" required="" aria-required="true"></span>
-<span class="ss-choice-label">The Second President of the United States</span>
-</label></li></ul>
-<div class="error-message" id="939568233_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div>
 <input type="hidden" name="draftResponse" value="[,,&quot;-515147457047911370&quot;]
 ">
 <input type="hidden" name="pageHistory" value="0">
@@ -215,7 +174,7 @@ label {
 
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
 <input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
-<div class="ss-password-warning ss-secondary-text">Never submit passwords through Google Forms.</div></td>
+</td>
 </tr></tbody></table></div></ol></form></div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
