--- a/test/index.html
+++ b/test/index.html
@@ -85,11 +85,11 @@ label {
     <form class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input  id="entry_989581125" type="text">
+          <input name="entry.989581125" id="entry_989581125" type="text">
           <label for="entry_989581125">First Name</label>
         </div>
         <div class="input-field col s6">
-          <input id="entry_434726236" type="text">
+          <input name="entry.434726236" id="entry_434726236" type="text">
           <label for="entry_434726236">Last Name</label>
         </div>
       </div>
@@ -97,7 +97,7 @@ label {
       <div class="col s12">
       <div class="row">
       <div class="input-field col s12">
-      <input id="entry_241456183" type="text">
+      <input name="241456183" id="entry_241456183" type="text">
       <label for="entry_241456183">Your School Email</label>
       </div>
       </div>
