--- a/test/index.html
+++ b/test/index.html
@@ -97,7 +97,7 @@ label {
       <div class="col s12">
       <div class="row">
       <div class="input-field col s12">
-      <input name="241456183" id="entry_241456183" type="text">
+      <input name="entry.241456183" id="entry_241456183" type="text">
       <label for="entry_241456183">Your School Email</label>
       </div>
       </div>
