--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <section>
       <style scoped>
-      /* -------------------------------------
+/* -------------------------------------
  * For horizontal version, set the
  * $vertical variable to false
  * ------------------------------------- */
@@ -78,7 +78,8 @@
  * ------------------------------------- */
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 body {
-  margin: 0;
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 0 5%;
   font-size: 100%;
   font-family: "Noto Sans", sans-serif;
@@ -98,16 +99,12 @@ h2 {
  * ------------------------------------- */
 #timeline {
   list-style: none;
-  margin: 120px 0 0;
-  padding: 0;
-  border-top: 8px solid #eee9dc;
-  display: table;
-  border-spacing: 30px 0;
+  margin: 50px 0 30px 120px;
+  padding-left: 30px;
+  border-left: 8px solid #eee9dc;
 }
 #timeline li {
-  display: table-cell;
-}
-#timeline li .relative {
+  margin: 40px 0;
   position: relative;
 }
 #timeline p {
@@ -115,20 +112,18 @@ h2 {
 }
 
 .date {
-  text-align: center;
-  top: -55px;
-  left: 0;
-  right: 0;
+  margin-top: -10px;
+  top: 50%;
+  left: -158px;
   font-size: 0.95em;
   line-height: 20px;
   position: absolute;
 }
 
 .circle {
-  margin: 0 auto;
-  top: -14px;
-  left: 0;
-  right: 0;
+  margin-top: -10px;
+  top: 50%;
+  left: -44px;
   width: 10px;
   height: 10px;
   background: #48b379;
@@ -139,12 +134,9 @@ h2 {
 }
 
 .content {
-  width: 200px;
-  max-height: 0;
-  margin-top: 40px;
-  vertical-align: top;
-  padding: 50px 15px 15px;
-  transition: width 0.4s linear, max-height 0.4s linear;
+  max-height: 20px;
+  padding: 50px 20px 0;
+  border-color: transparent;
   border-width: 2px;
   border-style: solid;
   border-radius: 0.5em;
@@ -157,19 +149,19 @@ h2 {
   border: solid transparent;
   position: absolute;
   pointer-events: none;
-  bottom: 100%;
+  right: 100%;
 }
 .content:before {
-  border-bottom-color: inherit;
-  border-width: 15px;
-  left: 50%;
-  margin-left: -15px;
+  border-right-color: inherit;
+  border-width: 20px;
+  top: 50%;
+  margin-top: -20px;
 }
 .content:after {
-  border-bottom-color: #48b379;
-  border-width: 12px;
-  left: 50%;
-  margin-left: -12px;
+  border-right-color: #48b379;
+  border-width: 17px;
+  top: 50%;
+  margin-top: -17px;
 }
 .content p {
   max-height: 0;
@@ -185,13 +177,8 @@ label {
   position: absolute;
   z-index: 100;
   cursor: pointer;
-  width: 200px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: block;
-  top: 60px;
-  left: 15px;
+  top: 20px;
+  transition: transform 0.2s linear;
 }
 
 .radio {
@@ -200,8 +187,7 @@ label {
 
 .radio:checked + .relative label {
   cursor: auto;
-  width: 400px;
-  transition: width 0.3s linear 0.2s;
+  transform: translateX(42px);
 }
 .radio:checked + .relative .circle {
   background: #f98262;
@@ -209,7 +195,9 @@ label {
 .radio:checked ~ .content {
   max-height: 180px;
   border-color: #eee9dc;
-  width: 400px;
+  margin-right: 20px;
+  transform: translateX(20px);
+  transition: max-height 0.4s linear, border-color 0.5s linear, transform 0.2s linear;
 }
 .radio:checked ~ .content p {
   max-height: 200px;
@@ -220,6 +208,57 @@ label {
 /* -------------------------------------
  * mobile phones (vertical version only)
  * ------------------------------------- */
+@media screen and (max-width: 767px) {
+  #timeline {
+    margin-left: 0;
+    padding-left: 0;
+    border-left: none;
+  }
+  #timeline li {
+    margin: 50px 0;
+  }
+
+  label {
+    width: 85%;
+    font-size: 1.1em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: block;
+    transform: translateX(18px);
+  }
+
+  .content {
+    padding-top: 45px;
+    border-color: #eee9dc;
+  }
+  .content:before, .content:after {
+    border: solid transparent;
+    bottom: 100%;
+  }
+  .content:before {
+    border-bottom-color: inherit;
+    border-width: 17px;
+    top: -16px;
+    left: 50px;
+    margin-left: -17px;
+  }
+  .content:after {
+    border-bottom-color: #48b379;
+    border-width: 20px;
+    top: -20px;
+    left: 50px;
+    margin-left: -20px;
+  }
+  .content p {
+    font-size: 0.9em;
+    line-height: 1.4;
+  }
+
+  .circle, .date {
+    display: none;
+  }
+}
 
       </style>
       <h2>CSS3 Timeline</h2>
