--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <section data-audio-src="theme.mp3">
         <h2>Our Theme Song</h2>
       </section>
-      <section style="font-size:1.7rem !important;">
+      <section style="font-size:20px !important;">
       <style scoped>
 /* -------------------------------------
  * For horizontal version, set the
