--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ label {
 
       </style>
 <section>
-<ul id='timeline'>
+<ul id='timeline' style="height:100vh">
   <li class='work'>
     <input class='radio' id='work5' name='works' type='radio' checked>
     <div class="relative">
