--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <section style="font-size:20px !important;">
       <style scoped>
-/* -------------------------------------
+      /* -------------------------------------
  * For horizontal version, set the
  * $vertical variable to false
  * ------------------------------------- */
@@ -78,8 +78,7 @@
  * ------------------------------------- */
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 body {
-  max-width: 1200px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0 5%;
   font-size: 100%;
   font-family: "Noto Sans", sans-serif;
@@ -99,12 +98,16 @@ h2 {
  * ------------------------------------- */
 #timeline {
   list-style: none;
-  margin: 50px 0 30px 120px;
-  padding-left: 30px;
-  border-left: 8px solid #eee9dc;
+  margin: 120px 0 0;
+  padding: 0;
+  border-top: 8px solid #eee9dc;
+  display: table;
+  border-spacing: 30px 0;
 }
 #timeline li {
-  margin: 40px 0;
+  display: table-cell;
+}
+#timeline li .relative {
   position: relative;
 }
 #timeline p {
@@ -112,18 +115,20 @@ h2 {
 }
 
 .date {
-  margin-top: -10px;
-  top: 50%;
-  left: -158px;
+  text-align: center;
+  top: -55px;
+  left: 0;
+  right: 0;
   font-size: 0.95em;
   line-height: 20px;
   position: absolute;
 }
 
 .circle {
-  margin-top: -10px;
-  top: 50%;
-  left: -44px;
+  margin: 0 auto;
+  top: -14px;
+  left: 0;
+  right: 0;
   width: 10px;
   height: 10px;
   background: #48b379;
@@ -134,9 +139,12 @@ h2 {
 }
 
 .content {
-  max-height: 20px;
-  padding: 50px 20px 0;
-  border-color: transparent;
+  width: 200px;
+  max-height: 0;
+  margin-top: 40px;
+  vertical-align: top;
+  padding: 50px 15px 15px;
+  transition: width 0.4s linear, max-height 0.4s linear;
   border-width: 2px;
   border-style: solid;
   border-radius: 0.5em;
@@ -149,19 +157,19 @@ h2 {
   border: solid transparent;
   position: absolute;
   pointer-events: none;
-  right: 100%;
+  bottom: 100%;
 }
 .content:before {
-  border-right-color: inherit;
-  border-width: 20px;
-  top: 50%;
-  margin-top: -20px;
+  border-bottom-color: inherit;
+  border-width: 15px;
+  left: 50%;
+  margin-left: -15px;
 }
 .content:after {
-  border-right-color: #48b379;
-  border-width: 17px;
-  top: 50%;
-  margin-top: -17px;
+  border-bottom-color: #48b379;
+  border-width: 12px;
+  left: 50%;
+  margin-left: -12px;
 }
 .content p {
   max-height: 0;
@@ -177,8 +185,13 @@ label {
   position: absolute;
   z-index: 100;
   cursor: pointer;
-  top: 20px;
-  transition: transform 0.2s linear;
+  width: 200px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
+  top: 60px;
+  left: 15px;
 }
 
 .radio {
@@ -187,7 +200,8 @@ label {
 
 .radio:checked + .relative label {
   cursor: auto;
-  transform: translateX(42px);
+  width: 400px;
+  transition: width 0.3s linear 0.2s;
 }
 .radio:checked + .relative .circle {
   background: #f98262;
@@ -195,9 +209,7 @@ label {
 .radio:checked ~ .content {
   max-height: 180px;
   border-color: #eee9dc;
-  margin-right: 20px;
-  transform: translateX(20px);
-  transition: max-height 0.4s linear, border-color 0.5s linear, transform 0.2s linear;
+  width: 400px;
 }
 .radio:checked ~ .content p {
   max-height: 200px;
@@ -208,63 +220,11 @@ label {
 /* -------------------------------------
  * mobile phones (vertical version only)
  * ------------------------------------- */
-@media screen and (max-width: 767px) {
-  #timeline {
-    margin-left: 0;
-    padding-left: 0;
-    border-left: none;
-  }
-  #timeline li {
-    margin: 50px 0;
-    overflow-y:visible;
-    height:100vh;
-  }
 
-  label {
-    width: 85%;
-    font-size: 1.1em;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    display: block;
-    transform: translateX(18px);
-  }
-
-  .content {
-    padding-top: 45px;
-    border-color: #eee9dc;
-  }
-  .content:before, .content:after {
-    border: solid transparent;
-    bottom: 100%;
-  }
-  .content:before {
-    border-bottom-color: inherit;
-    border-width: 17px;
-    top: -16px;
-    left: 50px;
-    margin-left: -17px;
-  }
-  .content:after {
-    border-bottom-color: #48b379;
-    border-width: 20px;
-    top: -20px;
-    left: 50px;
-    margin-left: -20px;
-  }
-  .content p {
-    font-size: 0.9em;
-    line-height: 1.4;
-  }
-
-  .circle, .date {
-    display: none;
-  }
-}
 
       </style>
 <section>
-<ul id='timeline' style="height:100vh">
+<ul id='timeline' style="height: 100vh">
   <li class='work'>
     <input class='radio' id='work5' name='works' type='radio' checked>
     <div class="relative">
