--- a/index.html
+++ b/index.html
@@ -67,195 +67,25 @@
       <section data-audio-src="theme.mp3">
         <h2>Our Theme Song</h2>
       </section>
-      <section style="font-size:20px !important;">
-      <style scoped>
-      /* -------------------------------------
- * For horizontal version, set the
- * $vertical variable to false
- * ------------------------------------- */
-/* -------------------------------------
- * General Style
- * ------------------------------------- */
-@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
-body {
-  margin: 0;
-  padding: 0 5%;
-  font-size: 100%;
-  font-family: "Noto Sans", sans-serif;
-  color: #eee9dc;
-  background: #48b379;
-}
-
-h2 {
-  margin: 3em 0 0 0;
-  font-size: 1.5em;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-/* -------------------------------------
- * timeline
- * ------------------------------------- */
-#timeline {
-  list-style: none;
-  margin: 120px 0 0;
-  padding: 0;
-  border-top: 8px solid #eee9dc;
-  display: table;
-  border-spacing: 30px 0;
-}
-#timeline li {
-  display: table-cell;
-}
-#timeline li .relative {
-  position: relative;
-}
-#timeline p {
-  margin: 0 0 15px;
-}
-
-.date {
-  text-align: center;
-  top: -55px;
-  left: 0;
-  right: 0;
-  font-size: 0.95em;
-  line-height: 20px;
-  position: absolute;
-}
-
-.circle {
-  margin: 0 auto;
-  top: -14px;
-  left: 0;
-  right: 0;
-  width: 10px;
-  height: 10px;
-  background: #48b379;
-  border: 5px solid #eee9dc;
-  border-radius: 50%;
-  display: block;
-  position: absolute;
-}
-
-.content {
-  width: 200px;
-  max-height: 0;
-  margin-top: 40px;
-  vertical-align: top;
-  padding: 50px 15px 15px;
-  transition: width 0.4s linear, max-height 0.4s linear;
-  border-width: 2px;
-  border-style: solid;
-  border-radius: 0.5em;
-  position: relative;
-}
-.content:before, .content:after {
-  content: "";
-  width: 0;
-  height: 0;
-  border: solid transparent;
-  position: absolute;
-  pointer-events: none;
-  bottom: 100%;
-}
-.content:before {
-  border-bottom-color: inherit;
-  border-width: 15px;
-  left: 50%;
-  margin-left: -15px;
-}
-.content:after {
-  border-bottom-color: #48b379;
-  border-width: 12px;
-  left: 50%;
-  margin-left: -12px;
-}
-.content p {
-  max-height: 0;
-  color: transparent;
-  text-align: justify;
-  word-break: break-word;
-  hyphens: auto;
-  overflow: hidden;
-}
-
-label {
-  font-size: 1.3em;
-  position: absolute;
-  z-index: 100;
-  cursor: pointer;
-  width: 200px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: block;
-  top: 60px;
-  left: 15px;
-}
-
-.radio {
-  display: none;
-}
-
-.radio:checked + .relative label {
-  cursor: auto;
-  width: 400px;
-  transition: width 0.3s linear 0.2s;
-}
-.radio:checked + .relative .circle {
-  background: #f98262;
-}
-.radio:checked ~ .content {
-  max-height: 180px;
-  border-color: #eee9dc;
-  width: 400px;
-}
-.radio:checked ~ .content p {
-  max-height: 200px;
-  color: #eee9dc;
-  transition: color 0.3s linear 0.3s;
-}
-
-/* -------------------------------------
- * mobile phones (vertical version only)
- * ------------------------------------- */
-
-
-      </style>
-<section>
-<ul id='timeline' style="height: 100vh">
-  <li class='work'>
-    <input class='radio' id='work5' name='works' type='radio' checked>
-    <div class="relative">
-      <label for='work5'>Lorem ipsum dolor sit amet</label>
-      <span class='date'>12 May 2013</span>
-      <span class='circle'></span>
-    </div>
-    <div class='content'>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio ea necessitatibus quo velit natus cupiditate qui alias possimus ab praesentium nostrum quidem obcaecati nesciunt! Molestiae officiis voluptate excepturi rem veritatis eum aliquam qui laborum
-        non ipsam ullam tempore reprehenderit illum eligendi cumque mollitia temporibus! Natus dicta qui est optio rerum.
-      </p>
-    </div>
-  </li>
-</ul>
+      <section>
+        <section>
+        <h1>Things you should really know about Jmaes Madison</h1>
+        </section>
+        <section>
+         <h3>He was the father of the constitution.</h3>
+        </section>
+        <section>
+        <h3>was elected to the newly formed U.S. House of Representatives, where he served from 1789 to 1797. In Congress, he worked to draft the Bill of Rights.
+        </h3>
+        </section>
+        <section>
+          <h3>signed Macon’s Bill Number Two into law in 1810.This law essentially set the stage for the War of 1812. Due to increasing disregard for U.S. neutrality in the French-British conflict and a call for military action from new members of Congress.
+</h3>
+        </section>
+        <section><h3>He lead the United States in the war of 1812 against Great Britain and after he served two terms he retired from his presidency and moved back to his plantation in Virginia.</h3>
 </section>
 <section>
- <li class='work'>
-    <input class='radio' id='work4' name='works' type='radio' checked>
-    <div class="relative">
-      <label for='work4'>Lorem ipsum dolor sit amet</label>
-      <span class='date'>11 May 2013</span>
-      <span class='circle'></span>
-    </div>
-    <div class='content'>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio ea necessitatibus quo velit natus cupiditate qui alias possimus ab praesentium nostrum quidem obcaecati nesciunt! Molestiae officiis voluptate excepturi rem veritatis eum aliquam qui laborum
-        non ipsam ullam tempore reprehenderit illum eligendi cumque mollitia temporibus! Natus dicta qui est optio rerum.
-      </p>
-    </div>
-  </li>
+  <h3>Louisiana (1812) and Kentucky (1816) joined the United States while He was in office.</h3>
 </section>
       </section>
 
