--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
-      <section data-background="http://picresize.com/popup.html?images/rsz_1rsz_9146673008_38031060bb_o.jpg">
+      <section data-background="assests/bg.jpg">
         <h1 style="font-family: 'Euphoria Script', cursive;">James Madison</h1>
         <h3>4th President of the United States</h3>
         <p>
