--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
-      <section data-background="assests/bg.jpg">
+      <section>
         <h1 style="font-family: 'Euphoria Script', cursive;">James Madison</h1>
         <h3>4th President of the United States</h3>
         <p>
