--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
       <section>
+      <audio data-autoplay src="audio/open.mp3"></audio>
         <h1 style="font-family: 'Euphoria Script', cursive;">James Madison</h1>
         <h3>4th President of the United States</h3>
         <p>
@@ -65,7 +66,7 @@
         </section>
       </section>
       <section>
-      <audio data-autoplay src="theme.mp3"></audio>
+      <audio data-autoplay src="audio/theme.mp3"></audio>
         <h2>Our Theme Song</h2>
       </section>
       <section>
