--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
       <section>
+      <aside class="notes">
+      James Madison was the 4th President of the United States, He was born in Virigina...  joking, you guys don't wanna hear that kind of boring biography do you?, I didn't think so..
+      </aside>
       <audio data-autoplay src="audio/open.mp3"></audio>
         <h1 style="font-family: 'Euphoria Script', cursive;">James Madison</h1>
         <h3>4th President of the United States</h3>
