--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     			Reveal.initialize({
             multiplex: {
         // Example values. To generate your own, see the socket.io server instructions.
-        secret: null // null so the clients do not have control of the master presentation'
+        secret: null, // null so the clients do not have control of the master presentation'
         id: '92b7c4e2b76bbd3c', // id, obtained from socket.io server
         url: 'revealjs.jit.su:80' // Location of socket.io server
     },
@@ -125,7 +125,7 @@
     					{ src: 'plugin/zoom-js/zoom.js', async: true },
     					{ src: 'plugin/notes/notes.js', async: true },
                { src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js', async: true },
-              { src: 'plugin/multiplex/client.js', async: true },
+              { src: 'plugin/multiplex/client.js', async: true }
     				]
     			});
   </script>
