--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             multiplex: {
         // Example values. To generate your own, see the socket.io server instructions.
         secret: null, // null so the clients do not have control of the master presentation'
-        id: 'dd581a5cb6b86677', // id, obtained from socket.io server
-        url: 'revealjs.jit.su:80' // Location of socket.io server
+        id: '37b5e441fdaa6d23', // id, obtained from socket.io server
+        url: '127.0.1.1:1948' // Location of socket.io server
     },
 
         transition: 'slide',
