--- a/master/index.html
+++ b/master/index.html
@@ -106,9 +106,9 @@
     			Reveal.initialize({
             multiplex: {
         // Example values. To generate your own, see the socket.io server instructions.
-        secret: '14299026776618633533', // null so the clients do not have control of the master presentation'
-        id: '1d8df63c411fa04d', // id, obtained from socket.io server
-        url: 'http://revealjs-historyslides.rhcloud.com:8000' // Location of socket.io server
+        secret: '14301073634174411412', // null so the clients do not have control of the master presentation'
+        id: 'afbec54831bacfed', // id, obtained from socket.io server
+        url: 'http://revealjs-historyslides.rhcloud.com:80' // Location of socket.io server
     },
 
         transition: 'slide',
@@ -125,7 +125,9 @@
     					{ src: 'plugin/zoom-js/zoom.js', async: true },
     					{ src: 'plugin/notes/notes.js', async: true },
                { src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js', async: true },
-              { src: 'plugin/multiplex/master.js', async: true }
+              { src: 'http://revealjs-historyslides.rhcloud.com/socket.io/socket.io.js', async: true }, 
+{ src: 'plugin/multiplex/client.js', async: true },
+{ src: 'plugin/multiplex/master.js', async: true }
     				]
     			});
   </script>
