--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     					{ src: 'plugin/zoom-js/zoom.js', async: true },
     					{ src: 'plugin/notes/notes.js', async: true },
                { src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js', async: true },
-              { src: 'plugin/multiplex/client.js', async: true }
+              { src: 'plugin/multiplex/client.js', async: true },
               { src: 'http://revealjs-historyslides.rhcloud.com/socket.io/socket.io.js', async: true }, 
 { src: 'plugin/multiplex/client.js', async: true },
 { src: 'plugin/multiplex/master.js', async: true }
