--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
     },
 
         transition: 'slide',
-        mouseWheel: true,
-    
+        mouseWheel: false,
+        			progress: true,
+    				controls: true,
     				transition: 'slide', // none/fade/slide/convex/concave/zoom
     
     				// Optional reveal.js plugins
