--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
         transition: 'slide',
         mouseWheel: false,
-        			progress: true,
-    				controls: true,
+        			progress: false,
+    				controls: false,
     				transition: 'slide', // none/fade/slide/convex/concave/zoom
     
     				// Optional reveal.js plugins
