--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
         transition: 'slide',
         mouseWheel: false,
         			progress: false,
+        			keyboard: false,
     				controls: false,
+    				touch: false,
     				transition: 'slide', // none/fade/slide/convex/concave/zoom
     
     				// Optional reveal.js plugins
