--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         mouseWheel: false,
         			progress: false,
         			keyboard: false,
-    				controls: false,
+    				controls: true,
     				touch: false,
-    				transition: 'slide', // none/fade/slide/convex/concave/zoom
+    				transition: 'convex', // none/fade/slide/convex/concave/zoom
     
     				// Optional reveal.js plugins
     				dependencies: [
